app/components/paperShow/components/betterSearch.scss
.wrapper {
  margin: 48px 0;
}

.searchWrapper {
  height: 51px;
  border-radius: 4px;
  box-shadow: 0 6px 36px -4px rgba(0, 0, 0, 0.2);
}

.searchIcon {
  position: absolute;
  top: 0;
  right: 16px;
  width: 17px;
  height: 100%;
  color: $main_blue0;
  cursor: pointer;

  svg {
    width: 100%;
    height: 100%;
  }
}

.smallTitle {
  margin-bottom: 16px;
  font-size: 24px;
  font-weight: bold;
  color: $black1;
  line-height: 1.2;
}

.title {
  font-size: 48px;
  font-weight: bold;
  line-height: 1.2;
  color: $gray8;
  margin-bottom: 16px;

  &.animatedTitle {
    transition: color 3s ease;
    transition-delay: 2s;
    color: $main_blue1;
  }
}

.notCalculatedYet {
  visibility: hidden;
}

.fosListTitle {
  display: inline-block;
  vertical-align: top;
  font-size: 14px;
  color: $gray5;
  white-space: pre-wrap;
}

.fosItem {
  display: inline-block;
  vertical-align: top;
  font-size: 14px;
  color: $black1;
  cursor: pointer;

  &:hover {
    text-decoration: underline;
  }
}

.fosSection {
  margin-top: 16px;
}

